<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/unfollowedMeButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/instafollow"
        android:text="@string/unfollowedMe"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/myUnfollowedButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/instafollow"
        android:text="@string/myUnfollowed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/newMyFollowedButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/instafollow"
        android:text="@string/newMyFollowed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/newFollowedMeButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/instafollow"
        android:text="@string/newFollowedMe"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>