<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:orientation="vertical"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/itemPic"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/itemAd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/medya" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:orientation="vertical" >

             <Button
                android:id="@+id/friendProfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/instagoruntule"
                android:text="@string/friendProfil"                
                android:drawableRight="@android:drawable/ic_menu_send"
                android:textColor="@color/button_material_light" />
            
            <Button
                android:id="@+id/instagramGoruntule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/instago"
                android:text="@string/goruntule"
                android:drawableRight="@drawable/instagram24"
                android:textColor="@color/button_material_light" />

            <Button
                android:id="@+id/friendProfilFollow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/instafollow"
                android:drawableRight="@android:drawable/checkbox_on_background"
                android:text="@string/friendFollowOk"
                android:textColor="@color/button_material_light" />

                 </LinearLayout>
    </LinearLayout>

</LinearLayout>